Displaying Validation Errors With jQuery

--- a/public/index.html
+++ b/public/index.html
@@ -61,10 +61,14 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <div id="error-message-empty" class="error-message">
+          <i class="fas fa-exclamation-triangle" style= "color: red"></i>
           Tweet content cannot be empty.
+          <i class="fas fa-exclamation-triangle" style= "color: red"></i>
         </div>
         <div id="error-message-tooLong" class="error-message">
+          <i class="fas fa-exclamation-triangle" style= "color: red"></i>
           Tweet content is too long.
+          <i class="fas fa-exclamation-triangle" style= "color: red"></i>
         </div>
         <form action="/tweets" method="POST" id="new-tweet-form">
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
